添加JVM参数注释 修改一些错误注释
Signed-off-by: Chris Cai <361389383@qq.com>